--- a/META.yml
+++ b/META.yml
@@ -1,15 +1,12 @@
---- #YAML:1.0
-name:                Data-Validate-Domain
-version:             0.08
-abstract:            domain validation methods
-license:             perl
-generated_by:        ExtUtils::MakeMaker version 6.32
-distribution_type:   module
-requires:     
+# http://module-build.sourceforge.net/META-spec.html
+#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
+name:         Data-Validate-Domain
+version:      0.09
+version_from: lib/Data/Validate/Domain.pm
+installdirs:  site
+requires:
     Net::Domain::TLD:              1.62
     Test::More:                    0
-meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.2.html
-    version: 1.2
-author:
-    - Neil Neely <neil@neely.cx>
+
+distribution_type: module
+generated_by: ExtUtils::MakeMaker version 6.17
